--- a/gb/14/7/16/n4201416.md
+++ b/gb/14/7/16/n4201416.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/jpwvgr227/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jpwvgr227/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>7.20法轮功反迫害15周年 美国首都活动通告</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2014/07/1307120322141012-600x400.jpg" />
 <h6>部分来自世界各地的法轮功人士、支持法轮功的社会人士将于7月17日聚集在美国首都华盛顿D.C.，举行包括集会、游行、烛光夜悼等一系列反迫害活动。（Mark Zou/大纪元）
 </h6>
 <hr>
-<p>【大纪元2014年07月17日讯】（大纪元记者李辰报导）15年前的1999年7月20日，中共挟持整个国家，以倾国之力发动了对<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md">法轮功</a>的迫害；15年来，法轮功学员遭受了“名誉上搞臭、经济上搞垮、肉体上消灭”、“打死算白死”、“不查身源、直接火化”、甚至“人类星球上从未有过的罪恶－－活摘器官”等各种绝灭人性的惨烈迫害。</p>
-<p>15年来，亿万善良<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md">法轮功</a>学员走过和平、理性的<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E5%8F%8D%E8%BF%AB%E5%AE%B3.md">反迫害</a>历程。</p>
-<p>今年的7月17日（周四）中午，<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md">美国</a>首都华盛顿特区将举行<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E5%8F%8D%E8%BF%AB%E5%AE%B3.md">反迫害</a>15<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E5%91%A8%E5%B9%B4.md">周年</a>7.20大型活动，法轮功学员将在<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md">美国</a>国会山前举行“解体中共 停止迫害法轮功”，“声援一亿七千万中国民众退出中共和相关组织”为主题的大型集会，美国多位重量级国会议员、多个世界知名人权和宗教自由组织的代表、受迫害人士等将现场发表演讲。</p>
+<p>【大纪元2014年07月17日讯】（大纪元记者李辰报导）15年前的1999年7月20日，中共挟持整个国家，以倾国之力发动了对<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>的迫害；15年来，法轮功学员遭受了“名誉上搞臭、经济上搞垮、肉体上消灭”、“打死算白死”、“不查身源、直接火化”、甚至“人类星球上从未有过的罪恶－－活摘器官”等各种绝灭人性的惨烈迫害。</p>
+<p>15年来，亿万善良<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员走过和平、理性的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%8D%E8%BF%AB%E5%AE%B3.md#1">反迫害</a>历程。</p>
+<p>今年的7月17日（周四）中午，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>首都华盛顿特区将举行<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%8D%E8%BF%AB%E5%AE%B3.md#1">反迫害</a>15<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%91%A8%E5%B9%B4.md#1">周年</a>7.20大型活动，法轮功学员将在<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>国会山前举行“解体中共 停止迫害法轮功”，“声援一亿七千万中国民众退出中共和相关组织”为主题的大型集会，美国多位重量级国会议员、多个世界知名人权和宗教自由组织的代表、受迫害人士等将现场发表演讲。</p>
 <p>随后，法轮功学员将从美国国会山出发，沿宾夕法尼亚大道，穿过宪法大道，游行至华盛顿纪念碑。游行队伍将呈现大法洪传世界、千古奇冤–法轮功受迫害，以及《九评》、退党等主题。</p>
 <figure id="attachment_5754145" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/07/1307181714421973-600x399.jpg" alt="2013年7月18日，美国国会议员、人权和宗教自由组织的代表、受迫害代表和千余名法轮功学员及支持者在美国国会山举行大型集会和游行，要求解体中共，结束迫害法轮功，同时声援一亿四千万中国民众退出中共和相关组织。（戴兵/大纪元）" title="2013年7月18日，美国国会议员、人权和宗教自由组织的代表、受迫害代表和千余名法轮功学员及支持者在美国国会山举行大型集会和游行，要求解体中共，结束迫害法轮功，同时声援一亿四千万中国民众退出中共和相关组织。（戴兵/大纪元）" width="600" b="399"
 	class="size-large wp-image-5754145" /></a><figcaption class="wp-caption-text">2013年7月18日，美国国会议员、人权和宗教自由组织的代表、受迫害代表和千余名法轮功学员及支持者在美国国会山举行大型集会和游行，要求解体中共，结束迫害法轮功，同时声援一亿四千万中国民众退出中共和相关组织。（戴兵/大纪元）</figcaption></figure>
 <p>7月17日晚上法轮功学员将回到国会山前举行公众烛光夜悼活动，悼念被中共江泽民集团迫害致死的中国大陆法轮功学员。</p>
 <p>伴随着祥和的音乐，每年的烛光夜悼活动场面庄严肃穆，悲壮感人，吸引众多路人、游客驻足倾听、用心感受法轮功修炼者一个个悲壮坚贞的因坚持信仰而被中共迫害失去生命的悲惨故事，感受法轮功学员承受无名苦难、呼唤正义良知的高尚境界，共同声援“解体中共、停止迫害法轮功”。</p>
 <figure id="attachment_5754156" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/07/1007281112221973-600x422.jpg" alt="2010华盛顿DC法轮功学员举行烛光夜悼。（戴兵/大纪元）" title="2010华盛顿DC法轮功学员举行烛光夜悼。（戴兵/大纪元）" width="600" b="422"
-	class="size-large wp-image-5754156" /></a><figcaption class="wp-caption-text">2010<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BFdc.md">华盛顿DC</a>法轮功学员举行烛光夜悼。（戴兵/大纪元）</figcaption></figure>
+	class="size-large wp-image-5754156" /></a><figcaption class="wp-caption-text">2010<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BFdc.md#1">华盛顿DC</a>法轮功学员举行烛光夜悼。（戴兵/大纪元）</figcaption></figure>
 <p><b>法轮功成全球聚焦点美国密切关注</b></p>
 <p>自2012年王立军出逃美领馆、薄熙来倒台、专责镇压法轮功的610办公室头子李东生落马、周永康被扣，曾庆红近日疯传被抓&#8230;&#8230;这场近二十年来中南海最大政治海啸，曝出中南海围绕高层接班人选的争夺聚焦点，让世界窥视到法轮功问题原来是当今中国的核心问题，乃至世界局势聚焦点。</p>
 <p>法轮功问题引发出的让全球民众在面对中共和正义良知之间的选择考验，正拷问每一个国家、民族、团体、商业财团及个人，这场正邪较量中的选择影响到每个人的切身利益，也影响到中国的未来走向和整个人类文明的命运。</p>
@@ -38,7 +38,7 @@
 <p>短时间内，李华锋家乡湖北武穴梅川镇已有一千二百二十八位乡亲签名按红手印，要求松阳县警方无罪释放李华锋。</p>
 <p>一千二百二十八位乡亲签名按红手印营救李华锋只是大陆民众联名营救法轮功学员事件中一例。随着法轮功真相广泛传播，越来越多的中国民众公开站出来替法轮功喊冤，联名按手印营救法轮功学员即是其中的一种形式。</p>
 <p>继2012年唐山562手印、石家庄700手印，以及2013的天津的2,800手印之后，黑龙江1万5千人站出来公开支持法轮功。</p>
-<p>欧洲议会副主席爱德华-麦克米兰?史考特先生在2013年3月4日出席美国<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BFdc.md">华盛顿DC</a>举行的“中国人权挑战论坛”之前，收到一封致欧洲议会的呈词——《全民崛起看中国》，以及大陆民众为声援700手印事件所征签的6,564手印。这些手印共同的目的就是要求当局无罪释放法轮功信仰者。史考特先生将这些征签转呈欧洲议会。</p>
+<p>欧洲议会副主席爱德华-麦克米兰?史考特先生在2013年3月4日出席美国<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BFdc.md#1">华盛顿DC</a>举行的“中国人权挑战论坛”之前，收到一封致欧洲议会的呈词——《全民崛起看中国》，以及大陆民众为声援700手印事件所征签的6,564手印。这些手印共同的目的就是要求当局无罪释放法轮功信仰者。史考特先生将这些征签转呈欧洲议会。</p>
 <p>2011年，黑龙江法轮功学员秦月明在佳木斯监狱被迫害至死，因其尸身全身黑紫，律师认为应该要再调查，并追究有关单位违法的责任，要依法公开审理案件。秦月明的妻子与两名女儿多次到监狱要求公布真相，却遭到打压，其妻与二女儿遭劳教，大女儿秦荣倩不畏打压对佳木斯监狱提出控告，但法院迟迟不做出裁决。</p>
 <p>秦月明的大女儿秦荣倩走上街头为父亲申冤征签。短短半个月，有超过1万5千民众为素不相识的法轮功学员挺身而出，站出来支持当地替父鸣冤的秦荣倩，在她的《喊冤昭雪书》上签名并按上大红手印。</p>
 <p>秦荣倩说：“大家的每一个签名和手印、每一份关注与支持，对爸爸的冤案早日昭雪，母亲和妹妹尽早恢复自由之身，都是一种正面的召唤和敦促；这样的义举也在选择和奠定着生命的永生与希望。‘真、善、忍’——普世的价值标准将引领着我们坚定的走过这漫漫长夜，迎来第一道黎明的曙光。”</p>
@@ -65,7 +65,7 @@
 <p>2013年12月，代表五亿欧洲民众的欧洲议会通过了要求“中共立即停止活体摘取良心犯，以及宗教信仰和少数族裔团体器官的行为”的议案。此后，欧洲的媒体纷纷跟进报导这场惨绝人寰的迫害。</p>
 <p>美国国会也于2013年6月27日首次针对“中共活摘器官”罪行，由两党议员联合提出《281号决议案》，制止“中共活摘器官”暴行。</p>
 <p>目前，法轮功真相已经广传世界130多个国家。从法轮功传出至2001年，就获得了600多个奖项（包括“7.20”前大陆各级政府所颁发的）。据不完全统计，法轮功迄今在海外共获得了约3千项褒奖与支持议案。</p>
-<p>2014年5月7日，在庆祝法轮大法洪传世界二十二<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E5%91%A8%E5%B9%B4.md">周年</a>的活动上，加拿大多元文化部及就业和社会发展部部长、国会议员杰森?康尼和另外十一位联邦国会议员到场祝贺。总理哈珀发来贺词赞扬加拿大法轮大法学会与加拿大人分享这个功法。</p>
+<p>2014年5月7日，在庆祝法轮大法洪传世界二十二<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%91%A8%E5%B9%B4.md#1">周年</a>的活动上，加拿大多元文化部及就业和社会发展部部长、国会议员杰森?康尼和另外十一位联邦国会议员到场祝贺。总理哈珀发来贺词赞扬加拿大法轮大法学会与加拿大人分享这个功法。</p>
 <p>巴特议员在集会上说：“‘真、善、忍’这一重要的箴言真的是我们伟大祖国——加拿大的全部（价值观），法轮功堪称所有加拿大人的精神典范。”</p>
 <p>2014年5月1日，由美国宾夕法尼亚州众议员马兰达起草的宾州众议院给李洪志先生颁发的褒奖中称赞修炼法轮大法让人们增进了健康，提升了道德，更深刻地理解了生命、人类和宇宙。</p>
 <p>宾州阿勒格尼郡议会主席德法兹奥在郡议会褒奖中表示，“对中国民众来说，法轮大法提供了勇于面对迫害的力量源泉”。</p>
@@ -93,38 +93,47 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/14/7/16/n4201416.htm">7.20法轮功反迫害15周年 美国首都活动通告</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798917.htm">武汉肺炎无法排除人传人 美国务院警告防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798091.htm">日本现首例武汉肺炎 机场加强防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11796789.htm">港卫生防护中心：武汉肺炎一患者 未涉足街市 疑人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11795520.htm">新型冠状病毒 近距离接触恐人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11793955.htm">武汉肺炎疑现人传人 夫妻先后发病</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882030.htm">湖北新增349其中武汉615？离奇统计引热议</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882754.htm">【翻墙必看】武汉单日近3万人外逃</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883869.htm">新冠肺炎出院人数破万？一线医生揭实情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883520.htm">断网前奏？中共工信部批准设立根服务器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880959.htm">当官的吃不完 贵州援助鄂州蔬菜烂在仓库</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879605.htm">【翻墙必看】分析：中国粮食危机再浮出水面</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881049.htm">【新闻看点】疫情严峻3方甩锅 川普为习说好话</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/12/31/n11758244.htm">【三国英雄11】乱世枭雄袁绍（文字版）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883542.htm">【热点互动】围绕零号病人 官方为何讳莫如深</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880584.htm">刘真惊传住院 夫辛龙只称：做健康检查</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/7/16/n4201355.md#1">特别报导：12年来 他们日夜坚守在大街上</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/7/14/n4200300.md#1">法轮功真相深入人心 大陆全民反迫害</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/7/15/n4200784.md#1">法轮功15年反迫害和平历程：呼唤正义良知</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/7/13/n4199661.md#1">组图：7.20反迫害15年 法轮功洪传世界</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/7/14/n4200464.md#1">亚洲法轮功学员东京集会反迫害</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/7/14/n4199756.md#1">专访法轮功学员：15年反迫害 坚韧精神感动加拿大</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/4/24/n4139733.md#1">震惊中外的4.25法轮功万人上访15周年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/4/20/n4136233.md#1">香港纪念4.25游行 民众感佩法轮功“中国的希望”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/7/5/13/n1708504.md#1">李洪志先生传法15年重要史实及辉煌历程</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jpwvgr227/djy/blob/master/gb/14/7/16/n4201416.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jpwvgr227/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jpwvgr227/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/26/n10174332.md#1" target="_blank">周晓辉：叶利钦退出苏共引发退党潮</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977767.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(3) 骑向自由</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/7/16/n4201416.htm">7.20法轮功反迫害15周年 美国首都活动通告</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/14/7/16/n4201416.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
