--- a/gb/20/3/14/n11940988.md
+++ b/gb/20/3/14/n11940988.md
@@ -400,8 +400,8 @@ American mountain resorts beginning March 15 through March 22. Please read this 
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903736.md#1">应对新冠病毒来袭 八方面教你做好准备</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/1/n10353384.md#1" target="_blank">郑恩宠：中国打压 招安律师与林昭精神</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/24/n10509014.md#1" target="_blank">驱除共产 回归传统 华府万人传递希望</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/10/n10471335.md#1" target="_blank">《天安门杀戮》挖到六四事件的根</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/23/n10928592.md#1" target="_blank">【视频】法轮功在俄罗斯 各行业学员身心受益</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
