--- a/gb/20/3/14/n11940988.md
+++ b/gb/20/3/14/n11940988.md
@@ -400,8 +400,8 @@ American mountain resorts beginning March 15 through March 22. Please read this 
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/6/n10695964.md#1" target="_blank">林辉：五四运动“第一烈士”是历史的赝品</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/1/n3859798.md#1" target="_blank">乡音：这样的菜农越多越好</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903736.md#1">应对新冠病毒来袭 八方面教你做好准备</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/4/n9921539.md#1" target="_blank">尹曙生：产粮大省为何饿死人</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10697882.md#1" target="_blank">这些患绝症的精英们何以逢生（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
